# Teams-Service

./: Dockerfile  api.py  graph.py  main.py  pyproject.toml  readme.md  requirements.txt  teams_token.py
docs/: api.md
